<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10pt"
        android:textStyle="bold"
        android:textSize="10pt"
        android:text="@string/judul" />

    <Button
        android:id="@+id/btnAddNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addNumber"
        />

    <Button
        android:id="@+id/btnAddText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addText"
        />

    <Button
        android:id="@+id/btnKalkulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kalkulator"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="150px"
        android:paddingBottom="10pt"
        android:paddingTop="10pt"
        android:textSize="5pt"
        android:text="@string/footer" />

</LinearLayout>