<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:text="@string/hallo"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nama"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="NIM"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/edt_prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Prodi"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_hallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/result"
        android:textSize="12sp" />


</LinearLayout>